Stylesheet/emote/tag updates 2015-05-11

--- a/source-css/ariablaze.css
+++ b/source-css/ariablaze.css
@@ -20,6 +20,13 @@
 
 .linkflair-spoilers .thumbnail.self { height: 64px !important }
 
+.thing[data-fullname="t3_35d8da"] .thumbnail {
+  width: 70px !important;
+  height: 70px !important;
+  background-position: 0 -140px !important;;
+  background-image: url(%%aria-sheet%%) !important;
+}
+
 /*** Rating Tags ***/
 
 .nsfw-stamp acronym {
