--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -737,7 +737,7 @@ a[href="/absilly"]{
     background-position:-140px -420px;
 }
 a[href="/abbucket"]{
-    height:129px;
+    height:90px;
     background-position:-210px -420px;
 }
 a[href="/absecret"]{
@@ -860,7 +860,24 @@ a[href="/abcutesmile"],
 a[href="/abpirate"],
 a[href="/abcomfy"],
 a[href="/ablicky"],
-a[href="/abfall"]{
+a[href="/abfall"],
+a[href="/abheythere"],
+a[href="/abwhy"],
+a[href="/abmarch"],
+a[href="/abbow"],
+a[href="/abamazed"],
+a[href="/abfear"],
+a[href="/abdonthurtme"],
+a[href="/abbestship"],
+a[href="/abumm"],
+a[href="/deviousbloom"],
+a[href="/spacebloom"],
+a[href="/readytowork"],
+a[href="/abcoffee"],
+a[href="/bucketsurprise"],
+a[href="/abbeingcute"],
+a[href="/abanxious"],
+a[href="/abnope"]{
     display:block;
     clear:none;
     float:left;
@@ -875,7 +892,7 @@ a[href="/abspooked"]{
 }
 a[href="/abconcern"]{
     width:132px;
-    height:175px;
+    height:152px;
     background-position: -140px 0px;
 }
 a[href="/abnah"]{
@@ -962,6 +979,91 @@ a[href="/abfall"]{
     width:113px;
     height:140px;
     background-position: -770px -210px;
+}
+a[href="/abheythere"]{
+    width:78px;
+    height:140px;
+    background-position: -910px -210px;
+}
+a[href="/abwhy"]{
+    width:118px;
+    height:140px;
+    background-position: -1050px -210px;
+}
+a[href="/abmarch"]{
+    width:67px;
+    height:140px;
+    background-position: -1190px -210px;
+}
+a[href="/abbow"]{
+    width:93px;
+    height:140px;
+    background-position: 0px -420px;
+}
+a[href="/abamazed"]{
+    width:105px;
+    height:140px;
+    background-position: -140px -420px;
+}
+a[href="/abfear"]{
+    width:126px;
+    height:110px;
+    background-position: -280px -420px;
+}
+a[href="/abdonthurtme"]{
+    width:101px;
+    height:126px;
+    background-position: -420px -420px;
+}
+a[href="/abbestship"]{
+    width:200px;
+    height:181px;
+    background-position: -560px -420px;
+}
+a[href="/abumm"]{
+    width:70px;
+    height:70px;
+    background-position: -770px -420px;
+}
+a[href="/deviousbloom"]{
+    width:70px;
+    height:70px;
+    background-position: -770px -490px;
+}
+a[href="/spacebloom"]{
+    width:126px;
+    height:126px;
+    background-position: -840px -420px;
+}
+a[href="/readytowork"]{
+    width:140px;
+    height:129px;
+    background-position: -980px -420px;
+}
+a[href="/abcoffee"]{
+    width:113px;
+    height:140px;
+    background-position: -1120px -420px;
+}
+a[href="/bucketsurprise"]{
+    width:70px;
+    height:132px;
+    background-position: 0px -630px;
+}
+a[href="/abbeingcute"]{
+    width:119px;
+    height:126px;
+    background-position: -70px -630px;
+}
+a[href="/abanxious"]{
+    width:92px;
+    height:140px;
+    background-position: -210px -630px;
+}
+a[href="/abnope"]{
+    width:110px;
+    height:173px;
+    background-position: -350px -630px;
 }
 
 /* Some more quick additions by /u/__brony__ */
