--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -341,7 +341,7 @@ a[href|="/examplecode2"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
-a[href|="/shykisscock"], a[href|="/seductivecadance"], a[href|="/princesshug"], a[href|="/spreadingcadance"]
+a[href|="/shykisscock"], a[href|="/seductivecadance"], a[href|="/princesshug"], a[href|="/spreadingcadance"], a[href|="/ppready"]
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -349,7 +349,7 @@ a[href|="/cheesesocks"], a[href|="/festivebuttplug"], a[href|="/wetqueen"], a[hr
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 200x200b 'motes. */
-a[href|="/dirtypinkie"], a[href|="/nightcest"], a[href|="/celestbj"], a[href|="/queenopenwide"]
+a[href|="/dirtypinkie"], a[href|="/nightcest"], a[href|="/celestbj"], a[href|="/queenopenwide"], a[href|="/lunacock"] 
 {background-image:url(%%200x200b%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -357,7 +357,7 @@ a[href|="/plotpair"], a[href|="/lickusclean"], a[href|="/tootight"], a[href|="/c
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 250x250b 'motes. */
-a[href|="/futafap"], a[href|="/futopen"]
+a[href|="/futafap"], a[href|="/futopen"], a[href|="/pinkiepanties"]
 {background-image:url(%%250x250b%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
@@ -373,7 +373,7 @@ a[href|="/festivebuttplug"], a[href|="/lickusclean"], a[href|="/seductivecadance
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"], a[href|="/celestbj"]    
+a[href|="/wetqueen"], a[href|="/tootight"], a[href|="/princesshug"], a[href|="/celestbj"], a[href|="/pinkiepanties"]     
 {background-position: -200% 0%;}
 
 /* Grid pos 3,0 'motes */
@@ -385,7 +385,7 @@ a[href|="/doublemoon"], a[href|="/wetcora"], a[href|="/spreadingcadance"], a[hre
 {background-position: 0% -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/wetmoons"], a[href|="/brushmyass"] 
+a[href|="/wetmoons"], a[href|="/brushmyass"], a[href|="/ppready"], a[href|="/lunacock"]   
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
@@ -393,7 +393,7 @@ a[href|="/kissmyass"], a[href|="/nmmpresents"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/tiapresenting"], 
+a[href|="/tiapresenting"]
 {background-position: 0% -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -459,6 +459,23 @@ a[href|="/lyrapresents"], a[href|="/abouttoburst"], a[href|="/suckitcowboy"], a[
 /* Misfits k */
 a[href|="/entertainme"], a[href|="/trixiefinish"], a[href|="/rarifinish"], a[href|="/acexlefty"], a[href|="/starburstseduce"], a[href|="/lunamine"], a[href|="/queendrip"], a[href|="/rarisuck"] 
 {background-image:url(%%misfitsk%%);display:block;float:left;}
+
+/* Misfits l */
+a[href|="/derpyready"], a[href|="/rockhard"], a[href|="/nmcock"], a[href|="/vsshower"], a[href|="/twipresents"], a[href|="/ssfinish"], a[href|="/rdxxxmas"], a[href|="/derpbow"], a[href|="/lyracock"], a[href|="/futaface"]
+{background-image:url(%%misfitsl%%);display:block;float:left;}
+
+/* Misfits m */
+a[href|="/suncock"], a[href|="/twifinish"], a[href|="/sffinish"], a[href|="/daringfinish"], a[href|="/braebend"], a[href|="/rarieyes"], a[href|="/wonderjob"], a[href|="/maudfinish"]
+{background-image:url(%%misfitsm%%);display:block;float:left;}
+
+/* Misfits n */
+a[href|="/tailwraps"], a[href|="/nmanal"], a[href|="/mooncreampie"], a[href|="/magictrick"], a[href|="/lyrish"], a[href|="/fluttershypresents"], a[href|="/cleanfloor"], a[href|="/cmonanon"]
+{background-image:url(%%misfitsn%%);display:block;float:left;}
+
+/* Misfits o */
+a[href|="/vanal"], a[href|="/creamparty"], a[href|="/vsdrip"], a[href|="/mooncock"]
+{background-image:url(%%misfitso%%);display:block;float:left;}
+
 
 /* Animated Emotes */
 a[href|="/twichug"], a[href|="/chugchugchug"] {background: url(%%chugchugchug%%) no-repeat;width:150px;height:116px;display:block;float:left;}
@@ -550,4 +567,35 @@ a[href|="/starburstseduce"] {width: 132px;height:200px;background-position: -236
 a[href|="/lunamine"] {width: 194px;height:250px;background-position: 0px -463px;}
 a[href|="/queendrip"] {width: 167px;height:200px;background-position: -194px -494px;}
 a[href|="/rarisuck"] {width: 150px;height:125px;background-position: 0px -713px;}
+a[href|="/derpyready"] {width: 143px;height:200px;background-position: 0px 0px;}
+a[href|="/rockhard"] {width: 132px;height:150px;background-position: -143px 0px;}
+a[href|="/nmcock"] {width: 124px;height:150px;background-position: -275px 0px;}
+a[href|="/vsshower"] {width: 141px;height:200px;background-position: 0px -201px;}
+a[href|="/twipresents"] {width: 200px;height:167px;background-position: -143px -150px;}
+a[href|="/ssfinish"] {width: 162px;height:199px;background-position: 0px -400px;}
+a[href|="/rdxxxmas"] {width: 150px;height:200px;background-position: -162px -317px;}
+a[href|="/derpbow"] {width: 172px;height:200px;background-position: -312px -317px;}
+a[href|="/lyracock"] {width: 145px;height:250px;background-position: 0px -600px;}
+a[href|="/futaface"] {width: 200px;height:112px;background-position: -162px -517px;}
+a[href|="/suncock"] {width: 106px;height:150px;background-position: 0px 0px;}
+a[href|="/twifinish"] {width: 150px;height:112px;background-position: -106px 0px;}
+a[href|="/maudfinish"] {width: 157px;height:200px;background-position: -256px 0px;}
+a[href|="/sffinish"] {width: 187px;height:250px;background-position: 0px -150px;}
+a[href|="/daringfinish"] {width: 193px;height:200px;background-position: -187px -200px;}
+a[href|="/braebend"] {width: 250px;height:225px;background-position: 0px -400px;}
+a[href|="/rarieyes"] {width: 126px;height:150px;background-position: -250px -400px;}
+a[href|="/wonderjob"] {width: 200px;height:167px;background-position: 0px -625px;}
+a[href|="/tailwraps"] {width: 200px;height:100px;background-position: 0px 0px;}
+a[href|="/nmanal"] {width: 250px;height:204px;background-position: -200px 0px;}
+a[href|="/mooncreampie"] {width: 200px;height:126px;background-position: 0px -100px;}
+a[href|="/magictrick"] {width: 200px;height:195px;background-position: 0px -226px;}
+a[href|="/lyrish"] {width: 200px;height:123px;background-position: -200px -204px;}
+a[href|="/fluttershypresents"] {width: 200px;height:198px;background-position: 0px -421px;}
+a[href|="/cleanfloor"] {width: 200px;height:153px;background-position: -200px -327px;}
+a[href|="/cmonanon"] {width: 202px;height:250px;background-position: 0px -619px;}
+a[href|="/vanal"] {width: 153px;height:200px;background-position: 0px 0px;}
+a[href|="/creamparty"] {width: 163px;height:200px;background-position: -153px 0px;}
+a[href|="/vsdrip"] {width: 155px;height:250px;background-position: 0px -200px;}
+a[href|="/mooncock"] {width: 250px;height:234px;background-position: -155px -200px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
+
