--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1225,12 +1225,11 @@ a.author[href$="shellbullet17"] {font-size:0!important; overflow:hidden; display
 a.author[href$="shellbullet17"]:before {font-size:10px!important; visibility:visible!important; content: "Delibullet17 "}
 
 a.author[href$="french_guy_al"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "pig_pal_al "}
+a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "not_forgotten_al "}
 
 a.author[href$="VerifiablyHazardJess"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="VerifiablyHazardJess"]:before {font-size:10px!important; visibility:visible!important; content: "VerifiablyPiggyJess "}
 
-.sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
 .sidecontentbox a.author[href$="DoomedCivilian"] {color: #E9B3F9}
 
 
@@ -1331,11 +1330,3 @@ z-index:9000}
 .midcol,.last-clicked.midcol{overflow:visible!important}
 
 .res-commentBoxes .commentarea .comment{overflow:visible!important}
-
-
-#header-img
-{
--webkit-animation:spin 432000s linear infinite; 
-    -moz-animation:spin 432s linear infinite;
-    animation:spin 432000s linear infinite;
-}
