--- a/source-css/scootalounge.css
+++ b/source-css/scootalounge.css
@@ -361,7 +361,8 @@ a[href="/scootabow2"],
 a[href="/bindingofscootaloo"],
 a[href="/scootacool2"],
 a[href="/scootabrag2"],
-a[href="/scootahanging"]
+a[href="/scootahanging"],
+a[href="/needsmorerainbowdash"]
 {
     display:block;
     clear:none;
@@ -380,6 +381,7 @@ a[href="/bindingofscootaloo"]{background-position:-100% -100%;}
 a[href="/scootacool2"]{background-position:-200% -100%;}
 a[href="/scootabrag2"]{background-position:-300% -100%;}
 a[href="/scootahanging"]{background-position:-400% -100%;}
+a[href="/needsmorerainbowdash"]{background-position:0% -200%;}
 
 /* Template for adding more emote sheets
 a[href="/"],
