--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -461,7 +461,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/starlightrage"], a[href|="/scratchhide"], a[href|="/octavia0"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/starlightrage"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -563,7 +563,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"]
+a[href|="/jawdrop"], a[href|="/sbmagic"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -687,7 +687,7 @@ a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"], a[href|=
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
-a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"]
+a[href|="/shibederp"], a[href|="/nursesaywhat"], a[href|="/fillyderpysit"], a[href|="/braehay"]
 {background-position: -200% -900%;}
 
 /* Grid pos 0,10 'motes */
@@ -1265,3 +1265,4 @@ a[href|="/applebat"] {width:150px;height:130px;background-position: 0 -452px;}
 a[href|="/fuzzybutts"] {width:150px;height:97px;background-position: -150px -504px;}
 a[href|="/socksaydash"] {width:200px;height:97px;background-position: -300px -513px;}
 a[href|="/jawdrop"] {width:150px;height:96px;}
+a[href|="/sbmagic"] {width:79px;height:100px;background-position: 0 -96px;}
