Stylesheet/emote/tag updates 2015-05-18

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -558,6 +558,6 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 
 .flair-strudel {
   width: 32px;
-  background-position: 0 -2300%;
+  background-position: 0 0;
   background-image: url(%%fritspecial%%) !important;
 }
