--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -1122,3 +1122,30 @@ a[href="/fruitrollup"]{
     background-position: -300px -400px;
 }
 
+a[href="/abblanket"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:166px;
+    height:120px;
+    background-image: url(%%AppleBloom-Blanket%%) !important;
+}
+a[href="/skydiverbloom"],
+a[href="/abcookie"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:100px;
+    height:100px;
+    background-image: url(%%ss01%%) !important;
+}
+a[href="/skydiverbloom"]{
+    width:98px;
+    height:140px;
+    background-position: 0px 0px;
+}
+a[href="/abcookie"]{
+    width:200px;
+    height:176px;
+    background-position: -140px 0px;
+}
