--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -80,7 +80,9 @@ a[href|="/bonwtf"] {display: block; clear: none; float: left; width: 109px; heig
 a[href|="/bonbride"] {display: block; clear: none; float: left; width: 79px; height: 144px; background-position: 0px  -1003px; background-image:url(%%stylesheet3%%) }
 a[href|="/lyrabloat"] {display: block; clear: none; float: left; width: 130px; height: 162px; background-position: 0px  -1152px; background-image:url(%%stylesheet3%%) }
 a[href|="/angrybon"] {display: block; clear: none; float: left; width: 261px; height: 176px; background-position: 0px  -1319px; background-image:url(%%stylesheet3%%) }
-a[href|="/bonblush"] {display: block; clear: none; float: left; width: 86px; height: 84px; background-position: 0px  -1499px; background-image:url(%%stylesheet3%%) }
+a[href|="/bonblush"] {display: block; clear: none; float: left; width: 86px; height: 83px; background-position: 0px  -1499px; background-image:url(%%stylesheet3%%) }
+a[href|="/sweetling"] {display: block; clear: none; float: left; width: 107px; height: 171px; background-position: 0px  -1586px; background-image:url(%%stylesheet3%%) }
+a[href|="/lbspringdance"] {display: block; clear: none; float: left; width: 194px; height: 123px; background-position: 0px  -1759px; background-image:url(%%stylesheet3%%) }
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
