--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -461,7 +461,7 @@ a[href|="/entertainme"], a[href|="/trixiefinish"], a[href|="/rarifinish"], a[hre
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/derpyready"], a[href|="/rockhard"], a[href|="/nmcock"], a[href|="/vsshower"], a[href|="/twipresents"], a[href|="/ssfinish"], a[href|="/rdxxxmas"], a[href|="/derpbow"], a[href|="/lyracock"], a[href|="/futaface"]
+a[href|="/derpyready"], a[href|="/rocksoff"], a[href|="/nmcock"], a[href|="/vsshower"], a[href|="/twipresents"], a[href|="/ssfinish"], a[href|="/rdxxxmas"], a[href|="/derpbow"], a[href|="/lyracock"], a[href|="/futaface"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /* Misfits m */
@@ -568,7 +568,7 @@ a[href|="/lunamine"] {width: 194px;height:250px;background-position: 0px -463px;
 a[href|="/queendrip"] {width: 167px;height:200px;background-position: -194px -494px;}
 a[href|="/rarisuck"] {width: 150px;height:125px;background-position: 0px -713px;}
 a[href|="/derpyready"] {width: 143px;height:200px;background-position: 0px 0px;}
-a[href|="/rockhard"] {width: 132px;height:150px;background-position: -143px 0px;}
+a[href|="/rocksoff"] {width: 132px;height:150px;background-position: -143px 0px;}
 a[href|="/nmcock"] {width: 124px;height:150px;background-position: -275px 0px;}
 a[href|="/vsshower"] {width: 141px;height:200px;background-position: 0px -201px;}
 a[href|="/twipresents"] {width: 200px;height:167px;background-position: -143px -150px;}
