--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2,7 +2,7 @@ div.titlebox span.word {display:none}
 
 div.titlebox .subscribers span.number:after {content:" Sillies and Ponies "}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " reading to Tank" }
+div.titlebox p.users-online span.number:after { content: " At the Gala as +1's" }
 div.titlebox p.users-online span.word { display: none }
 
 
@@ -1209,6 +1209,9 @@ a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:v
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Day1ightDirk1e "}
 
+a.author[href$="theBenger"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="theBenger"]:before {font-size:10px!important; visibility:visible!important; content: "theBenger: Java Barista "}
+
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "ZellyBelly "}
 
@@ -1223,9 +1226,6 @@ a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!imp
 
 a.author[href$="shellbullet17"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="shellbullet17"]:before {font-size:10px!important; visibility:visible!important; content: "Delibullet17 "}
-
-a.author[href$="french_guy_al"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="french_guy_al"]:before {font-size:10px!important; visibility:visible!important; content: "not_forgotten_al "}
 
 a.author[href$="VerifiablyHazardJess"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="VerifiablyHazardJess"]:before {font-size:10px!important; visibility:visible!important; content: "VerifiablyPiggyJess "}
