--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -1086,6 +1086,9 @@ a.author[href$=MyNameIsNavy]:before {
 a.author[href$="Drawlestia"]:after{content:" - Created the Header!"}
 a.author[href$="NtmrMoon"]:after{color: #D6B52F; content:" - 1st place Costume Contest Winner!"}
 a.author[href$="willowmvp227"]:after{color: #D6B52F; content:" - 2nd place Costume Contest Winner!"}
+a.author[href$="SeatieBelt"]:after{content:" + __brony__ best ship"}
+a.author[href$="__brony__"]:after{content:" + SeatieBelt best ship"}
+a.author[href$="VerifiablyHazardJess"]:after{content:" - Verified"}
 /*greentext*/
 .md blockquote {
     border: 0;
