--- a/source-css/scootalounge.css
+++ b/source-css/scootalounge.css
@@ -362,7 +362,8 @@ a[href="/bindingofscootaloo"],
 a[href="/scootacool2"],
 a[href="/scootabrag2"],
 a[href="/scootahanging"],
-a[href="/needsmorerainbowdash"]
+a[href="/needsmorerainbowdash"],
+a[href="/scootacloak"]
 {
     display:block;
     clear:none;
@@ -382,6 +383,7 @@ a[href="/scootacool2"]{background-position:-200% -100%;}
 a[href="/scootabrag2"]{background-position:-300% -100%;}
 a[href="/scootahanging"]{background-position:-400% -100%;}
 a[href="/needsmorerainbowdash"]{background-position:0% -200%;}
+a[href="/scootacloak"]{background-position:-100% -200%;}
 
 /* Template for adding more emote sheets
 a[href="/"],
