--- a/source-css/sombra.css
+++ b/source-css/sombra.css
@@ -696,6 +696,15 @@ height: 164px;
 background-image: url(%%megusta%%)
 }
 
+a[href|="/wow"] {
+display: block;
+clear: none;
+float: left;
+width: 200px;
+height: 200px;
+background-image: url(%%wow%%)
+}
+
 a[href|="/darktwi"] {
 display: block;
 clear: none;
