--- a/source-css/sugarbelle.css
+++ b/source-css/sugarbelle.css
@@ -1,4 +1,24 @@
+/*===header===*/
+/*---tabmenu---*/
+
+.tabmenu li a {
+border-radius:3px 3px 0 0;
+}
+
+/*===markdown===*/
+
+/*note: add later possibly
+.md h2 {
+color:#29162a;
+}
+*/
+
 /*===sidebar===*/
+
+.side .usertext h1 a {
+color:#0079d3;
+}
+
 /*---hrule---*/
 
 .side .titlebox .usertext-body hr {
