--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -334,7 +334,7 @@ body .disabled .morelink a:hover {
 .flair {
   padding:0;
   background:url(%%flair-table%%);
-  color:black;
+  color:none;
   border:0;
   border-radius:0;
   display:inline-block;
